--- a/Proyecto/demo/src/main/resources/application.properties
+++ b/Proyecto/demo/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+logging.file.name=logs/spring-boot-application.log
